# iggy

./: CONTRIBUTOR_GUIDE_KR.md  Cargo.toml  IGGY_ARCHITECTURE_KR.md  JMH_SETUP_APPROACHES.md  KO.md  LOG_ROTATION_IMPLEMENTATION_PLAN.md  MEMO.md  TEMP.md  TODO.md  partition-to-thread-mapping-analysis.md
core/sdk/src/: lib.rs
core/sdk/src/clients/: consumer.rs
core/server/src/: main.rs
core/server/src/binary/handlers/consumer_groups/: get_consumer_group_handler.rs
foreign/java/: README.md
foreign/java/benchmarks/: README.md  build.gradle.kts
foreign/java/benchmarks/src/main/java/org/apache/iggy/benchmark/poll/: AsyncTcpPollBenchmark.java  BasePollBenchmark.java
foreign/java/benchmarks/src/main/java/org/apache/iggy/benchmark/send/: BaseSendBenchmark.java
foreign/java/benchmarks/src/main/java/org/apache/iggy/benchmark/util/: IggyTestContainer.java  JmhResultAnalyzer.java
foreign/java/benchmarks/src/main/java/org/apache/iggy/client/blocking/tcp/: MessageSerializationBenchmark.java
foreign/java/dev-support/checkstyle/: suppressions.xml
foreign/java/java-sdk/src/main/java/org/apache/iggy/client/blocking/tcp/: BytesDeserializer.java  ConsumerGroupsTcpClient.java  ConsumerOffsetTcpClient.java  InternalTcpClient.java  MessagesTcpClient.java  PartitionsTcpClient.java  PersonalAccessTokensTcpClient.java  StreamsTcpClient.java  SystemTcpClient.java  TopicsTcpClient.java  UsersTcpClient.java
foreign/java/java-sdk/src/test/java/org/apache/iggy/client/blocking/: IntegrationTest.java
foreign/java/java-sdk/src/test/java/org/apache/iggy/client/blocking/tcp/: ByteBufMemoryLeakTest.java
iggy-wireshark-dissector/: Cargo.toml  PROGRESS.md  README.md  SUMMARY.md  iggy.lua  iggy_simple.lua  install.sh  protocol-spec.md
iggy-wireshark-dissector/src/: main.rs
iggy-wireshark-dissector/test/: README.md  test_protocol.py
iggy-wireshark-dissector/tests/: integration_test.rs
protocol-dissector/: Cargo.toml  README.md  iggy.lua  iggy_dissector.lua
protocol-dissector/backup/: backup_iggy_dissector.lua  copy_dissector.lua
protocol-dissector/iggy/: commands.lua  constants.lua  dissector.lua  fields.lua  iggy.lua  status_codes.lua  types.lua  utils.lua
protocol-dissector/src/: lib.rs
wireshark/: .gitignore  BUILD.md  CMakeLists.txt  CODEGEN.md  Cargo.toml  DISSECTOR_GUIDE.md  LAST_DOCS.md  MIGRATION.md  Makefile  QUIC_SUPPORT.md  README.md  REQUEST_RESPONSE_TRACKER.md  SPEC.md  WIRESHARK_LUA_API.md  backup_iggy_dissector.lua  dissector.lua  packet-iggy.c  plugin.c  rs.pcapng
wireshark/c-dissector/: .gitignore  CMakeLists.txt  Makefile  README.md  packet-iggy.c
wireshark/rust/: README.md
wireshark/rust/tests/: protocol_tests.rs
wireshark/src/: lib.rs
wireshark/tests/: protocol_tests.rs
