[package]
name = "wireshark"
version = "0.1.0"
edition = "2021"

[features]
protocol-tests = []

[[test]]
name = "protocol_tests"
path = "tests/protocol_tests.rs"
required-features = ["protocol-tests"]

[dependencies]
futures-util = { workspace = true }
iggy = { workspace = true }
iggy_common = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
